Correções necessárias de estrutura, estilo e responsividade.

--- a/index.html
+++ b/index.html
@@ -34,40 +34,47 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
   </head>
   <body>
-    <header class="header">
-      <a href="/"><img src="src/images/logo.svg" alt="Logo da Huddle" /></a>
-    </header>
-    <main class="main">
-      <div class="image">
+    <main>
+      <header class="header">
+        <a href="/"><img src="src/images/logo.svg" alt="Logo da Huddle" /></a>
+      </header>
+      <div class="main">
         <img
+          class="image"
           src="src/images/illustration-mockups.svg"
           alt="Ilustração de páginas web"
         />
-      </div>
+        <section class="info">
+          <div class="content">
+            <h1>
+              Build The Community <br />
+              Your Fans Will Love
+            </h1>
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice.
+              But so does your audience. Create connections with your user as
+              you engage in genuine discossion.
+            </p>
+            <a class="btn-register" href="#">Register</a>
+          </div>
 
-      <div class="content">
-        <h1>
-          Build The Community <br />
-          Your Fans Will Love
-        </h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice. But
-          so does your audience. Create connections with your user as you engage
-          in genuine discossion.
-        </p>
-        <a class="btn-register" href="#">Register</a>
-      </div>
-
-      <div class="social">
-        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <ul class="social">
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+        </section>
       </div>
     </main>
-    
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
       integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
